--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,7 +32,6 @@
 
 body {
     background-color: var(--culture);
-    min-height: 450px;
     font-family: var(--font);
 }
 
@@ -768,49 +767,65 @@ margin-left: 100px;
     width: 200px;
 }
 
-/* --------------------------------------------------------------------- checkout stripe */
+/* --------------------------------------------------------------------- checkout page */
 
-.StripeElement,
-.stripe-style-input {
-    box-sizing: border-box;
-    height: 40px;
-    padding: 10px 12px;
-    border: 1px solid transparent;
-    border-radius: 0px;
-    background-color: black;
-    box-shadow: 0 1px 3px 0 #e6ebf1;
-    -webkit-transition: box-shadow 150ms ease;
-    transition: box-shadow 150ms ease;
-}
-
-.StripeElement--focus,
-.stripe-style-input:focus,
-.stripe-style-input:active {
-    box-shadow: 0 1px 3px 0 #cfd7df;
-}
-
-.StripeElement--webkit-autofill {
-    background-color: #fefde5 !important;
-}
-
-.stripe-style-input::placeholder {
-    color: #aab7c4;
-
+.paypal-logo{
+    width:200px;
 }
 
 
-#card-element {
-    border: 1px solid #ced4da;
-    padding: .375rem .75rem;
-    border-radius: .375rem;
+.row {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap; 
+    flex-wrap: wrap;
+    margin: 0 -16px;
+  }
+
+.col-75 {
+        -ms-flex: 75%; 
+        flex: 75%;
 }
 
+.col-25,
+.col-50,
+.col-75 {
+  padding: 0 16px;
+}
+.col-25 {
+    -ms-flex: 25%; 
+    flex: 25%;
+}
+  
 
+.row input[type=text] {
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+  }
+
+
+  .row .btn {
+    background-color: var(--Yellow);
+    color: white;
+    padding: 12px;
+    margin: 10px 0;
+    border: none;
+    width: 100%;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 17px;
+  }
+  
+  .row  .btn:hover {
+    background-color: var(--Yellow_lighter);
+  }
 
 #paypal-button-container{
-    width:100vw;
-    margin: auto;
-    z-index: 10;
+    width:inherit;
+    
 }
 .col-md-8{
     margin: auto; 
@@ -827,11 +842,40 @@ margin-left: 100px;
     width:100%;
 }
 
-.payments-container{
-    width:70%; 
-    margin: auto;
-}
+.row .container {
+    position: relative;
+    background-color: #f2f2f2;
+    padding: 5px 20px 15px 20px;
+    border-radius: 3px;
+  }
 
+
+.row label {
+    margin-bottom: 10px;
+    display: block;
+  }
+  
+ .row .icon-container {
+    margin-bottom: 20px;
+    padding: 7px 0;
+    font-size: 24px;
+  } 
+
+  .row span.price {
+    float: right;
+    color: grey;
+  }
+  
+
+/* Responsive layout */
+@media (max-width: 800px) {
+    .row {
+      flex-direction: column-reverse;
+    }
+    .col-25 {
+      margin-bottom: 20px;
+    }
+  }
 
 /* ------------------------------------------------------------------search classes */
 
@@ -1994,6 +2038,10 @@ iframe {
 }
 /* medium devices (631px and down) */
 @media only screen and (max-width: 631px) {
+    .paypal-logo{
+        width:100px;
+    }
+    
     #title_hero{
         font-size: 25px;
     }
