--- a/templates/checkout/checkout.html
+++ b/templates/checkout/checkout.html
@@ -3,205 +3,212 @@
 {% load static %}
 
 {% block content %}
-
+<style>
+  #paypal-button-container {
+      display: none;
+  }
+</style>
 <section>
-  <div class="container mb-2">
-    <h1 class="text-center mt-5">Checkout</h1>
-    <div class="row">
-      <!-- what is in the cart -->
-      <div class="col-md-4 order-md-2 mb-4">
-        <h4 class="d-flex justify-content-between align-items-center mb-3">
-          <span class="text-muted">Your cart</span>
-          <span class="badge bg-site-color badge-pill">{{cart_items| length}}</span>
-        </h4>
-        <ul class="list-group mb-3">
-          {% for item in cart_items %}
-          <li class="list-group-item d-flex justify-content-between lh-condensed">
-            <div>
-              <h6 class="my-0" style="font-weight: bolder;">{{item.excursion.title|slice:":25"|title}}</h6>
-              <div class="pt-3">
-                <small><img class="cart-detail-img" src="{{item.excursion.main_image.url}}"
-                    alt="{{item.excursion.image_name}}"></small>
-              </div>
-              {% if item.values.adult_qty %}
-              <div class="pt-2"><i class="fa-solid fa-user"></i> Adult: {{item.values.adult_qty}}</div>
-              {% endif%}
+    <h1 class="text-center mt-5">Checkout With   <img src="{% static 'images/paypal-logo.png' %}" class="paypal-logo" alt="Small Image"></h1>
+    <div class="row" style="margin-bottom: 100px;">
 
-              {% if item.values.child_qty %}
-              <div class="pt-2"> <i class="fa-solid fa-child"></i> Child: {{item.values.child_qty}}</div>
-              {% endif%}
-              {% if item.values.infant_qty %}
-              <i class="fa-solid fa-baby-carriage"></i> <div class="pt-2">Infant: {{item.values.infant_qty}}</div>
-              {% endif%}
-              <div clas="pt-2">
-                <i class="fa-solid fa-calendar-days"></i> Date: {{item.values.excursion_date}}
+      <div class="col-75"> 
+        <div class="container">
+          <div class="row">
+            <!-- form -->
+          <form action="/action_page.php" id="myForm">
+            {% csrf_token %}
+            <div class="row">
+              <div class="col-50">
+                <h3>Billing Address</h3>
+                  <!-- Full Name -->
+               <label for="full_name"><i class="fa fa-user"></i> Full Name</label>
+                <input type="text" id="full_name" name="full_name" placeholder="John M. Doe" required>
+                 Email 
+                <label for="email"><i class="fa fa-envelope"></i> Email</label>
+                <input type="text" id="email" name="email" placeholder="john@example.com" required>
+                 <!-- phone number -->
+                <label for="Phone_number"><i class="fa fa-phone"></i> Phone number</label>
+                <input type="text" id="Phone_number" name="Phone_number" placeholder="07541147634" required>
               </div>
-              <div clas="pt-3">
-                <i class="fa-solid fa-clock"></i> Time: {{item.values.selected_time}}
-              </div>
-              <div class="pt-2">
-                 <p><i class="fa-solid fa-circle-check" style="color:green;"></i> Free Cancellation</p>
             </div>
-            <span class="text-muted">${{item.subTotal | floatformat:2}}</span>
-          </li>
-      
-          <li class="list-group-item d-flex justify-content-between">
-            <span>Total (US)</span>
-            <strong>${{total | floatformat:2}}</strong> 
-          </li>
+          </form>
 
-          <li class="list-group-item d-flex justify-content-between">
-            <span>Anticipo <span style="color:green">The payment required now to secure the reservation.</span></span>
-           <strong id="anticipo">
-            <span>$</span>{{item.anticipo|floatformat:2}}
-            </strong>
-          </li>
+             <!-- paypal -->
+             <div class="mt-5"> 
+              <div class="container">
+                <div  id="paypal-button-container"></div>
+              </div>
+            </div>
 
-          <li class="list-group-item d-flex justify-content-between">
-            <span>Restante <span style="color:green">The remaining amount can be paid upon pick-up.</span></span>
-            <strong>${{item.company_price_total}}</strong>
-          </li>
+         </div>
+        </div>
+      </div> 
+  
+      <div class="col-25">
+        <div class="container">
+          <h4>Cart <span class="price" style="color:black"><i class="fa fa-shopping-cart"></i> <b>{{cart_items| length}}</b></span></h4>
+          {% for item in cart_items %}
+          <h6 class="my-0" style="font-weight: bolder;">
+            {{item.excursion.title|slice:":25"|title}}
+            <span class="price"> ${{item.subTotal | floatformat:2}}</span>
+          </h6>
+          <small><img class="cart-detail-img" src="{{item.excursion.main_image.url}}"
+            alt="{{item.excursion.image_name}}"></small>
+            {% if item.values.adult_qty %}
+            <div class="pt-2"><i class="fa-solid fa-user"></i> Adult: {{item.values.adult_qty}}</div>
+            {% endif%}
+            {% if item.values.child_qty %}
+            <div class="pt-2"> <i class="fa-solid fa-child"></i> Child: {{item.values.child_qty}}</div>
+            {% endif%}
+            <div clas="pt-2">
+              <i class="fa-solid fa-calendar-days"></i> {{item.values.excursion_date}}
+            </div>
+            <div clas="pt-2">
+              <i class="fa-solid fa-clock"></i> Time: {{item.values.selected_time}}
+            </div>
+          <hr>
+          {% endfor%}
 
+          <!-- for for applying the discount code -->
+          <form method="POST" action="{% url 'apply_discount' %}">
+            {% csrf_token %}
+            <div class="">
+              <input type="text" class="form-control" id="reference" name="reference" placeholder="Enter Promo code"
+                maxlength="6" required>
+               <button id="apply" class=" form-control btn my_hover btn-outline-secondary">Apply Promo code</button>
+            </div>
+        </form>
+          <hr>
+          <!-- price details -->
+          <!-- <p>SubTotal <span class="price" style="color:black"><b>${{subtotal | floatformat:2}}</b></span></p> -->
+          <p>Taxes<span class="price" style="color:grey"><b>${{taxes_and_fees|floatformat:2}}</b></span></p>
+          <p>Total <span class="price" style="color:black"><b>${{m_total|floatformat:2}}</b></span></p>
+          {% if not discount %}
           <li class="list-group-item d-flex justify-content-between">
-            <p style="color: green">All taxes and fees included</p>
+            <span>Reserve now:</span>
+            <strong style="color:green">${{charge_amount| floatformat:2}}</strong>
           </li>
-    
-          {% if total_discount != 0%}
+          {% endif %}
+
+          {% if discount > 0 %}
           <li class="list-group-item d-flex justify-content-between">
             <span>Discount</span>
-            <strong>${{total_discount | floatformat:2}}</strong>
+            <strong>${{discount | floatformat:2}}</strong>
           </li>
           <li class="list-group-item d-flex justify-content-between">
             <span>Final Total (US)</span>
-            <strong>${{new_total | floatformat:2}}</strong>
+            <strong>${{my_new_total | floatformat:2}}</strong>
           </li>
-          {% endif%}
-  
+          <li class="list-group-item d-flex justify-content-between">
+            <span>Reserve now:</span>
+            <strong style="color:green">${{charge_amount| floatformat:2}}</strong>
+          </li>
+          {% endif %}
+       
 
-          <!-- session_discount -->
-          <!-- card icons -->
-          <div class="text-center list-group-item ">
-            <i class="fa fa-cc-visa visa"></i>
-            <i class="fa fa-cc-amex amex"></i>
-            <i class="fa fa-cc-mastercard mastercard"></i>
-            <i class="fa fa-cc-discover discover"></i>
-          </div>
-        </ul>
 
-        <!-- form for updating quantity-->
-        {% if item.excursion.dicount %}
-      <form method="POST" action="{% url 'apply_discount' %}">
-        {% csrf_token %}
-        <div class="col-md-6 mb-3 list-group-item">
-          <label for="reference">Discount Code</label>
-          <input type="text" class="form-control" id="reference" name="reference" placeholder="Enter Promo code"
-            maxlength="6" required>
+        
+          </b></span></p>
         </div>
-        <div class="col-md-6 mb-3 list-group-item">
-          <label for="apply">Apply Discount Code</label>
-          <button id="apply" class=" form-control btn my_hover btn-outline-secondary">Apply</button>
-        </div>
-    </form>
-  </div>
-    {% endif %}
       </div>
-      {% endfor %}
     </div>
-
-    <!-- card pytments infomation -->
-    <div class="col-md-8 order-md-1">
-      <h4 class="mb-3 text-center">Provide your personal information</h4>
-      <p style="color:green; text-align: center;"><i class="fa-solid fa-lock"></i> Checkout is fast and secure with Paypal</p>
-      <form action=" " method="POST" id="payment-form">
-        {% csrf_token %}
-        <div class="row payments-container">
-          <div class="col-md-6 mb-3">
-            <label for="full_name">Full name *</label>
-            <input type="text" class="form-control" id="full_name" name="full_name"
-              placeholder="Full Name" required>
-          </div>
-
-          <div class="col-md-6 mb-3">
-            <label for="Phone_number">Phone number</label>
-            <input  type="text" class="form-control" id="Phone_number" name="Phone_number"
-              placeholder="Phone number" required>
-          </div>
-          {% if not request.user.is_authenticated %}
-          <div class="col-md-12 mb-3">
-            <label for="email">Email</label>
-            <input  type="text" class="form-control" id="email" name="email"
-              placeholder="Email" required>
-          </div>
-          {%endif%}
-          <hr class="mb-4">
-          <div id="paypal-button-container"></div>
-          <p class="p-3"><i class="fa-solid fa-circle-check" style="color:green;"></i> Free Cancellation</p>
-      </form>
-    </div>
-  </div>
-  </div>
-
 
   <!-- Include the PayPal JavaScript SDK -->
   <script src="https://www.paypal.com/sdk/js?client-id={{paypal_client_id}}&currency=USD"></script>
+<script>
+function areAllFieldsFilled() {
+        var fields = document.querySelectorAll('#myForm input[required]');
+        for (var i = 0; i < fields.length; i++) {
+            if (!fields[i].value) {
+                return false;
+            }
+        }
+        return true;
+}
 
-  <!-- create token -->
-  <script>
+    // Function to toggle the display of the PayPal button
+    function togglePayPalButton() {
+        var paypalButtonContainer = document.getElementById('paypal-button-container');
+        if (areAllFieldsFilled()) {
+            paypalButtonContainer.style.display = 'block';
+        } else {
+            paypalButtonContainer.style.display = 'none';
+        }
+    }
+
+     // Function to get all form values
+     function getFormValues() {
+        var formData = {};
+        var formElements = document.querySelectorAll('#myForm input');
+        formElements.forEach(function(element) {
+            formData[element.name] = element.value;
+        });
+        return formData;
+    }
+
+    // Event listener to check form fields on input change
+    var formInputs = document.querySelectorAll('#myForm input[required]');
+    formInputs.forEach(function(input) {
+        input.addEventListener('input', function() {
+            togglePayPalButton();
+            var formValues = getFormValues();
+            console.log(formValues); // Log form values to the console
+        });
+    });
+
+
     const csrftoken = getCookie('csrftoken');
     const total = '{{new_total | floatformat:2}}'
-    const anticipo = document.getElementById('anticipo')?.innerText
+    const anticipo = '{{charge_amount| floatformat:2}}'
     const user = '{{user}}'
     const home_url = "{% url 'checkout-success' %}"
-    console.log('user', user)
     console.log('anticipo', anticipo)
-    console.log(csrftoken)
 
-    // Make pyment function
+
+    // Make payment function
     function makepayment() {
-      const full_name = document.getElementById('full_name')?.value;
-      const phone_number = document.getElementById('Phone_number')?.value;
-      const reference = document.getElementById('reference')?.value
-      const email = document.getElementById('email')?.value
-      console.log('this is the referene inside payment', reference)
-      const url = "{% url 'checkout' %}";
-      fetch(url, {
-        method: 'POST',
-        headers: {
-          'Content-type': 'application/json',
-          'X-CSRFToken': csrftoken,
-        },
-        body: JSON.stringify({ 'user': user, 'full_name': full_name, 'phone_number': phone_number, 'reference': reference,'email':email})
-      })
-      console.log(user)
-      console.log('payment prcess alreay')
+        const full_name = document.getElementById('full_name')?.value;
+        const phone_number = document.getElementById('Phone_number')?.value;
+        const reference = document.getElementById('reference')?.value;
+        const email = document.getElementById('email')?.value;
+        console.log('this is the reference inside payment', reference)
+        const url = "{% url 'checkout' %}";
+        fetch(url, {
+            method: 'POST',
+            headers: {
+                'Content-type': 'application/json',
+                'X-CSRFToken': csrftoken,
+            },
+            body: JSON.stringify({ 'user': user, 'full_name': full_name, 'phone_number': phone_number, 'reference': reference, 'email': email })
+        });
+        console.log(user);
+        console.log('payment process already');
     }
 
     // Render the PayPal button into #paypal-button-container
     paypal.Buttons({
-
-      // Set up the transaction
-      createOrder: function (data, actions) {
-        return actions.order.create({
-          purchase_units: [{
-            amount: {
-              value: parseFloat(anticipo)
-            }
-          }]
-        });
-      },
-
-      // Finalize the transaction
-      onApprove: function (data, actions) {
-        return actions.order.capture().then(function (details) {
-          //Show a success message to the buyer
-          makepayment()
-           window.location.href = home_url;
-          });
-      }
-
+        // Set up the transaction
+        createOrder: function (data, actions) {
+            return actions.order.create({
+                purchase_units: [{
+                    amount: {
+                        value: parseFloat(anticipo)
+                    }
+                }]
+            });
+        },
+        // Finalize the transaction
+        onApprove: function (data, actions) {
+            return actions.order.capture().then(function (details) {
+                // Show a success message to the buyer
+                makepayment();
+                window.location.href = home_url;
+            });
+        }
     }).render('#paypal-button-container');
+</script>
 
-  </script>
 </section>
 
 {% endblock content %}
