--- a/templates/administrator/administrator.html
+++ b/templates/administrator/administrator.html
@@ -99,9 +99,9 @@
                     </td>
                     <td>{{order.customer_email}}</td>
                     <td>{{order.full_name}}</td>
-                    <td>£{{order.subtotal}}</td>
+                    <td>${{order.subtotal}}</td>
                     <td>{{order.advanced}}</td>
-                    <td>£{{order.remaining}}</td>
+                    <td>${{order.remaining}}</td>
                 </tr>
                 {% endfor %}
             </table>
@@ -144,9 +144,9 @@
                     </td>
                     <td>{{order.customer_email}}</td>
                     <td>{{order.full_name}}</td>
-                    <td>£{{order.subtotal}}</td>
+                    <td>${{order.subtotal}}</td>
                     <td>{{order.advanced}}</td>
-                    <td>£{{order.remaining}}</td>
+                    <td>${{order.remaining}}</td>
                 </tr>
                 {% endfor %}
             </table>
@@ -192,9 +192,9 @@
                     </td>
                     <td>{{order.customer_email}}</td>
                     <td>{{order.full_name}}</td>
-                    <td>£{{order.subtotal}}</td>
+                    <td>${{order.subtotal}}</td>
                     <td>{{order.advanced}}</td>
-                    <td>£{{order.remaining}}</td>
+                    <td>${{order.remaining}}</td>
                 </tr>
                 {% endfor %}
             </table>
@@ -236,7 +236,7 @@
                     </td>
                     <td>{{order.customer_email}}</td>
                     <td>{{order.full_name}}</td>
-                    <td>£{{order.subtotal}}</td>
+                    <td>${{order.subtotal}}</td>
                 </tr>
                 {% endfor %}
             </table>
