Add time to orders

--- a/templates/administrator/administrator.html
+++ b/templates/administrator/administrator.html
@@ -88,7 +88,7 @@
                 <tr>
                     <td><img src="{{order.image}}" alt="{{order.excursion_name}}" style="width:75px"></td>
                     <td>{{order.excursion_name |slice:":25"|title}}</td>
-                    <td>{{order.excursion_date}}</td>
+                    <td>{{order.excursion_date}}, Time: {{order.time_selected}}</td>
                     <td>{{order.adult_qty}}</td>
                     <td>{{order.child_qty}}</td>
                     <td>{{order.place_pickup}}</td>
@@ -133,7 +133,7 @@
                 <tr>
                     <td><img src="{{order.image}}" alt="{{order.excursion_name}}" style="width:75px"></td>
                     <td>{{order.excursion_name |slice:":25"|title}}</td>
-                    <td>{{order.excursion_date}}</td>
+                    <td>{{order.excursion_date}}, Time: {{order.time_selected}}</td>
                     <td>{{order.adult_qty}}</td>
                     <td>{{order.child_qty}}</td>
                     <td>{{order.place_pickup}}</td>
@@ -181,7 +181,7 @@
                 <tr>
                     <td><img src="{{order.image}}" alt="{{order.excursion_name}}" style="width:75px"></td>
                     <td>{{order.excursion_name |slice:":25"|title}}</td>
-                    <td>{{order.excursion_date}}</td>
+                    <td>{{order.excursion_date}}, Time: {{order.time_selected}}</td>
                     <td>{{order.adult_qty}}</td>
                     <td>{{order.child_qty}}</td>
                     <td>{{order.place_pickup}}</td>
@@ -225,7 +225,7 @@
                 <tr>
                     <td><img src="{{order.image}}" alt="{{order.excursion_name}}" style="width:75px"></td>
                     <td>{{order.excursion_name |slice:":25"|title}}</td>
-                    <td>{{order.excursion_date}}</td>
+                    <td>{{order.excursion_date}}, Time: {{order.time_selected}}</td>
                     <td>{{order.adult_qty}}</td>
                     <td>{{order.child_qty}}</td>
                     <td>{{order.place_pickup}}</td>
