Add manual order excursions

--- a/templates/administrator/administrator_base.html
+++ b/templates/administrator/administrator_base.html
@@ -69,6 +69,8 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="{% url 'administrator' %}"> 
                                 <i class="fa-solid fa-book"></i> Bookings</a></li>
+                            <li><a class="dropdown-item" href="{% url 'add_manual_booking' %}"> 
+                                    <i class="fa-solid fa-plus"></i> Add Manual Booking</a></li>
                             <li><a class="dropdown-item" href="{% url 'company_bookings' %}"> <i class="fa-solid fa-table"></i> Companies Bookings</a></li>
                         </ul>
                     </li>
