--- a/templates/checkout/checkout.html
+++ b/templates/checkout/checkout.html
@@ -1,214 +1,73 @@
-{% extends 'excursions/excursions_base.html' %}
-<title>{% block title %}excursions in bavaro punta cana {% endblock %}</title>
-{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+  {% load static %}
+  <head>
+    <meta charset="utf-8" />
+    <title>Accept a payment</title>
+    <script src="https://kit.fontawesome.com/392c1ed101.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <meta name="description" content="A demo of a payment on Stripe" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="{% static 'css/stripe.css' %}" rel="stylesheet" type="text/css">
+  </head>
+  <body>
+ <div style="text-align: center;">
+ <a href="{% url 'home'%}" id="logo-link" target="_blank">
+  <img style="width:400px" class="palm-tree" src="{% static 'images/excursions/Logo.png' %}" alt="Logo">
+</a>
+</div>
 
-{% block content %}
-<style>
-  #paypal-button-container {
-      display: none;
-  }
-</style>
-<section>
-    <h1 class="text-center mt-5">Checkout With   <img src="{% static 'images/paypal-logo.png' %}" class="paypal-logo" alt="Small Image"></h1>
-    <div class="row" style="margin-bottom: 100px;">
+  <div class="grid-container">
+    <div id="checkout-detail-container">
+      <div class="accordion" id="accordionPanelsStayOpenExample">
 
-      <div class="col-75"> 
-        <div class="container">
-          <div class="row">
-            <!-- form -->
-          <form action="/action_page.php" id="myForm">
-            {% csrf_token %}
-            <div class="row">
-              <div class="col-50">
-                <h3>Billing Address</h3>
-                  <!-- Full Name -->
-               <label for="full_name"><i class="fa fa-user"></i> Full Name</label>
-                <input type="text" id="full_name" name="full_name" placeholder="John M. Doe" required>
-                 Email 
-                <label for="email"><i class="fa fa-envelope"></i> Email</label>
-                <input type="text" id="email" name="email" placeholder="john@example.com" required>
-                 <!-- phone number -->
-                <label for="Phone_number"><i class="fa fa-phone"></i> Phone number</label>
-                <input type="text" id="Phone_number" name="Phone_number" placeholder="07541147634" required>
-              </div>
+         {% for item in cart_items %}
+        <div class="accordion-item">
+          <h5 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse{{forloop.counter}}" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+              {{item.excursion.title|slice:":25"|title}}
+            </button>
+          </h5>
+          <div id="panelsStayOpen-collapse{{forloop.counter}}" class="accordion-collapse collapse show">
+            <div class="accordion-body">
+              <img src="{{item.excursion.main_image.url}}" style="width:100px" class="img-thumbnail mt-3" alt="{{item.excursion.title}}"> <br>
+              <i class="fa-solid fa-user mt-3"></i> Adult {{item.values.adult_qty}} <br>
+              {% if item.values.child_qty %}
+              <i class="fa-solid fa-user mt-3"></i> Children {{item.values.child_qty}} <br>
+              {% endif%}
+              <i class="fa-solid fa-calendar-days"></i> Date: {{item.values.excursion_date}}<br>
+              <i class="fa-solid fa-clock"></i> Time: {{item.values.selected_time}} <br>
+              <i class="fa-solid fa-money-bill-wave"></i> ${{item.subTotal | floatformat:2}}<br>
+              <i class="fa-solid fa-truck-pickup"></i> Pick UP: Dreams Macao
             </div>
-          </form>
-
-             <!-- paypal -->
-             <div class="mt-5"> 
-              <div class="container">
-                <div  id="paypal-button-container"></div>
-              </div>
-            </div>
-
-         </div>
+          </div>
         </div>
-      </div> 
-  
-      <div class="col-25">
-        <div class="container">
-          <h4>Cart <span class="price" style="color:black"><i class="fa fa-shopping-cart"></i> <b>{{cart_items| length}}</b></span></h4>
-          {% for item in cart_items %}
-          <h6 class="my-0" style="font-weight: bolder;">
-            {{item.excursion.title|slice:":25"|title}}
-            <span class="price"> ${{item.subTotal | floatformat:2}}</span>
-          </h6>
-          <small><img class="cart-detail-img" src="{{item.excursion.main_image.url}}"
-            alt="{{item.excursion.image_name}}"></small>
-            {% if item.values.adult_qty %}
-            <div class="pt-2"><i class="fa-solid fa-user"></i> Adult: {{item.values.adult_qty}}</div>
-            {% endif%}
-            {% if item.values.child_qty %}
-            <div class="pt-2"> <i class="fa-solid fa-child"></i> Child: {{item.values.child_qty}}</div>
-            {% endif%}
-            <div clas="pt-2">
-              <i class="fa-solid fa-calendar-days"></i> {{item.values.excursion_date}}
-            </div>
-            <div clas="pt-2">
-              <i class="fa-solid fa-clock"></i> Time: {{item.values.selected_time}}
-            </div>
-          <hr>
-          {% endfor%}
+        {% endfor %}
 
-          <!-- for for applying the discount code -->
-          <form method="POST" action="{% url 'apply_discount' %}">
-            {% csrf_token %}
-            <div class="">
-              <input type="text" class="form-control" id="reference" name="reference" placeholder="Enter Promo code"
-                maxlength="6" required>
-               <button id="apply" class=" form-control btn my_hover btn-outline-secondary">Apply Promo code</button>
-            </div>
-        </form>
-          <hr>
-          <!-- price details -->
-          <!-- <p>SubTotal <span class="price" style="color:black"><b>${{subtotal | floatformat:2}}</b></span></p> -->
-          <p>Taxes<span class="price" style="color:grey"><b>${{taxes_and_fees|floatformat:2}}</b></span></p>
-          <p>Total <span class="price" style="color:black"><b>${{m_total|floatformat:2}}</b></span></p>
-          {% if not discount %}
-          <li class="list-group-item d-flex justify-content-between">
-            <span>Reserve now:</span>
-            <strong style="color:green">${{charge_amount| floatformat:2}}</strong>
-          </li>
-          {% endif %}
-
-          {% if discount > 0 %}
-          <li class="list-group-item d-flex justify-content-between">
-            <span>Discount</span>
-            <strong>${{discount | floatformat:2}}</strong>
-          </li>
-          <li class="list-group-item d-flex justify-content-between">
-            <span>Final Total (US)</span>
-            <strong>${{my_new_total | floatformat:2}}</strong>
-          </li>
-          <li class="list-group-item d-flex justify-content-between">
-            <span>Reserve now:</span>
-            <strong style="color:green">${{charge_amount| floatformat:2}}</strong>
-          </li>
-          {% endif %}
-       
-
-
-        
-          </b></span></p>
-        </div>
       </div>
-    </div>
+      <div style="padding:10px 20px">
+        <span> Taxes ${{taxes_and_fees|floatformat:2}}</span><br>
+        <span>Total (US) <strong>${{final_total | floatformat:2}}</strong></span><br>
+        <span style="color:green" >Reserve now with: <strong>${{anticipo| floatformat:2}}</span> <br>
+      </div>
+     </div>
 
-  <!-- Include the PayPal JavaScript SDK -->
-  <script src="https://www.paypal.com/sdk/js?client-id={{paypal_client_id}}&currency=USD"></script>
-<script>
-function areAllFieldsFilled() {
-        var fields = document.querySelectorAll('#myForm input[required]');
-        for (var i = 0; i < fields.length; i++) {
-            if (!fields[i].value) {
-                return false;
-            }
-        }
-        return true;
-}
-
-    // Function to toggle the display of the PayPal button
-    function togglePayPalButton() {
-        var paypalButtonContainer = document.getElementById('paypal-button-container');
-        if (areAllFieldsFilled()) {
-            paypalButtonContainer.style.display = 'block';
-        } else {
-            paypalButtonContainer.style.display = 'none';
-        }
-    }
-
-     // Function to get all form values
-     function getFormValues() {
-        var formData = {};
-        var formElements = document.querySelectorAll('#myForm input');
-        formElements.forEach(function(element) {
-            formData[element.name] = element.value;
-        });
-        return formData;
-    }
-
-    // Event listener to check form fields on input change
-    var formInputs = document.querySelectorAll('#myForm input[required]');
-    formInputs.forEach(function(input) {
-        input.addEventListener('input', function() {
-            togglePayPalButton();
-            var formValues = getFormValues();
-            console.log(formValues); // Log form values to the console
-        });
-    });
-
-
-    const csrftoken = getCookie('csrftoken');
-    const total = '{{new_total | floatformat:2}}'
-    const anticipo = '{{charge_amount| floatformat:2}}'
-    const user = '{{user}}'
-    const home_url = "{% url 'checkout-success' %}"
-    console.log('anticipo', anticipo)
-
-
-    // Make payment function
-    function makepayment() {
-        const full_name = document.getElementById('full_name')?.value;
-        const phone_number = document.getElementById('Phone_number')?.value;
-        const reference = document.getElementById('reference')?.value;
-        const email = document.getElementById('email')?.value;
-        console.log('this is the reference inside payment', reference)
-        const url = "{% url 'checkout' %}";
-        fetch(url, {
-            method: 'POST',
-            headers: {
-                'Content-type': 'application/json',
-                'X-CSRFToken': csrftoken,
-            },
-            body: JSON.stringify({ 'user': user, 'full_name': full_name, 'phone_number': phone_number, 'reference': reference, 'email': email })
-        });
-        console.log(user);
-        console.log('payment process already');
-    }
-
-    // Render the PayPal button into #paypal-button-container
-    paypal.Buttons({
-        // Set up the transaction
-        createOrder: function (data, actions) {
-            return actions.order.create({
-                purchase_units: [{
-                    amount: {
-                        value: parseFloat(anticipo)
-                    }
-                }]
-            });
-        },
-        // Finalize the transaction
-        onApprove: function (data, actions) {
-            return actions.order.capture().then(function (details) {
-                // Show a success message to the buyer
-                makepayment();
-                window.location.href = home_url;
-            });
-        }
-    }).render('#paypal-button-container');
-</script>
-
-</section>
-
-{% endblock content %}
+    <form id="payment-form">
+     <!-- Display a payment form -->
+      <div id="payment-element">
+        <!--Stripe.js injects the Payment Element-->
+      </div>
+      <button id="submit">
+        <div class="spinner hidden" id="spinner"></div>
+        <span id="button-text">Pay now</span>
+      </button>
+      <div id="payment-message" class="hidden"></div>
+    </form>
+  </div>
+    <!-- store the url valus -->
+    <div id="url_stripe" data-url="{% url 'stripe_checkout' %}"></div>
+  </body>
+</html>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="https://js.stripe.com/v3/"></script>
+<script src="{% static 'js/checkout.js' %}" defer></script>
