--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -32,10 +32,15 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <!-- Local stylesheets -->
-    <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <!-- Google tag (gtag.js) -->
+  
+   <!-- stripe -->
+<script src="https://js.stripe.com/v3/"></script>
+<script src="{% static 'js/checkout.js' %}" defer></script>
+<link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
   <!-- translation -->
-  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-  <!-- Google tag (gtag.js) -->
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11294930508">
 </script>
 <script>
@@ -125,7 +130,6 @@
          <div class="square-btn2"><span class="main-link2 underline-btn"><a href="{% url 'rentals' %}">Stays</a></span>
          </div>
     {% endif %}
-
 
     <!-- form -->
     <form role="search" method="get" autocomplete="on" action="{% url 'excursion_search_results' %}">
