--- a/templates/checkout/success.html
+++ b/templates/checkout/success.html
@@ -19,11 +19,7 @@
                         </div>
       
                         <strong>Amount paid:</strong>
-                        <span>${{anticipo | floatformat:2}}</span><br>
-                        <strong>Payment due upon pickup:</strong><br>
-                        <span>${{company_price_total | floatformat:2}}</span>
-                        
-                        
+                        <span>${{Anticipo | floatformat:2}}</span><br>
                         {% endif%}
                         <div class="pt-2">We have sent you an email with all the booking information</div>
                         <div class="mt-5">
