--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -18,7 +18,7 @@
         <p class="p-pop-cart">We’ll hold your spot for <span id="timer"> </span> minutes</p>
     </div>
     <div class="cart-pop-up-btn">
-        <a href="{% url 'excursion-cart' %}" class="group-button"> Go to Cart</a>
+        <!-- <a href="{% url 'excursion-cart' %}" class="group-button"> Go to Cart</a> -->
         <a href="{% url 'checkout' %}"  class="group-button"> Checkout</a>
     </div>
     <hr>
