--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -148,7 +148,7 @@
 
     <div id="other-icons">
         <div class="shoping-cart-container">
-            <a href="{% url 'excursion-cart' %}" style="color:white">
+            <a href="{% url 'checkout' %}" style="color:white">
                 <div class="icon">
                     <i class="fa-solid fa-cart-shopping"></i>
                 </div>
