--- a/templates/checkout/checkout.html
+++ b/templates/checkout/checkout.html
@@ -79,7 +79,10 @@
               <i class="fa-solid fa-calendar-days"></i> Date: {{item.values.excursion_date}}<br>
               <i class="fa-solid fa-clock"></i> Time: {{item.values.selected_time}} <br>
               <i class="fa-solid fa-money-bill-wave"></i> ${{item.subTotal | floatformat:2}}<br>
-              <i class="fa-solid fa-truck-pickup"></i> Pick UP: Dreams Macao
+              <i class="fa-solid fa-truck-pickup"></i> Pick UP: {{item.values.place_pickup}}<br>
+              {% if item.values.place_dropup %}
+              <i class="fa-solid fa-truck-pickup"></i> Drop Up: {{item.values.place_dropup }}<br>
+              {% endif %}
             </div>
           </div>
         </div>
