change words drop off

--- a/templates/checkout/checkout.html
+++ b/templates/checkout/checkout.html
@@ -81,7 +81,7 @@
               <i class="fa-solid fa-money-bill-wave"></i> ${{item.subTotal | floatformat:2}}<br>
               <i class="fa-solid fa-truck-pickup"></i> Pick UP: {{item.values.place_pickup}}<br>
               {% if item.values.place_dropup %}
-              <i class="fa-solid fa-truck-pickup"></i> Drop Up: {{item.values.place_dropup }}<br>
+              <i class="fa-solid fa-truck-pickup"></i> Drop Off: {{item.values.place_dropup }}<br>
               {% endif %}
             </div>
           </div>
