--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -113,7 +113,7 @@
                         {% if excursions.transportation %}
                           <!-- place drop up info -->
                           <div class="form-group mt-3">
-                            <label for="place_dropup"> Drop up Location</label>
+                            <label for="place_dropup"> Drop Off Location</label>
                             <input type="text" class="form-control" id="place_dropup" name="place_dropup" required>
                         </div>
                         {% endif %}
