--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -136,6 +136,7 @@
                         <input type="hidden" name="price_children" value="{{excursions.price_children}}">
                       <!-- hidden input for the company price-->
                         <input type="hidden" name="company_Price" value="{{excursions.company_Price}}">
+                        <input type="hidden" name="reserve_no_pay" value="{{excursions.reserve_no_pay}}">
                         <!-- form btn -->
                         <div class="form_detail_btn">
                             <!-- go back to keep shopping btn -->
